# WhisperLiveKit

./: .gitignore  AGENTS.md  README.md  pyproject.toml
chrome-extension/: README.md
docs/: auto-capture-analysis.md  technical_integration.md
scripts/: auto_capture_analyze.py  cer_evaluate_capture.py  plot_optuna_relationships.py  recompute_global_cer_jiwer.py  run_capture_experiments.py  run_optuna_localagreement.py  run_validation_set.py
tests/local_agreement/: support.py  test_online_asr_suppression_flow.py  test_phrase_blacklist.py  test_suppression_harness_smoke.py
whisperlivekit/: __init__.py  audio_processor.py  basic_server.py  config.py  core.py  parse_args.py
whisperlivekit/local_agreement/: backends.py  online_asr.py  whisper_online.py
whisperlivekit/simul_whisper/: simul_whisper.py
wlk_control/: README.md  __init__.py  api.py  bridge_worker.py  model_manager.py  models.py  profile_store.py  runtime.py
wlk_control/tests/: bridge_worker_payload_tests.py  online_asr_silence_flush_tests.py
